修复已出货状态下的物料出货单不能修改备注的bug

--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -40,7 +40,7 @@
               </select>
             #{/if}
             #{else }
-              <input type="text" name="dp.receipt" value="${dp.receipt.label()}" readonly>
+              <input type="text" value="${dp.receipt.label()}" readonly>
             #{/else}
             </td>
           </tr>
