--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -46,12 +46,15 @@
           </td>
 
           <th>宽(包材)</th>
-          <td colspan="3">
+          <td>
             <div class="input-append">
               <input type="text" style="width:100px" name="pro.width" value="${pro.width}">
               <span class="add-on">mm</span>
             </div>
           </td>
+
+          <th>对应原始SKU</th>
+          <td><input type="text" name="pro.origin_sku" value="${pro.origin_sku}"></td>
         </tr>
 
         <tr>
