修改出货日期时间格式

--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -108,7 +108,7 @@
               ${dp.financeState?.label()}
               #{/else}
           </td>
-          <td>${dp.deliveryDate.datetime()}</td>
+          <td>#{time_tooltip time:dp.deliveryDate, datetime:true/}</td>
           <td>${dp.handler.username}</td>
           <td>#{time_tooltip time:dp.createDate/}</td>
         </tr>
