--- a/core/app/views/ShipmentReports/monthlyShipmentPrescription.html
+++ b/core/app/views/ShipmentReports/monthlyShipmentPrescription.html
@@ -7,7 +7,7 @@
 
 #{info_row}
 <ul>
-  <li><strong>单月物流发货量报表</strong></li>
+  <li><strong>单月运输时效统计</strong></li>
 </ul>
 #{/info_row}
 #{flash_alert /}
@@ -30,7 +30,7 @@
 
         <div class="input-append input-prepend inline">
           <span class="add-on"><i class="icon-file"></i></span>
-          <input type="button" class="btn btn-success" id="download_excel" data-url="@{Excels.exportMonthlyShipment()}"
+          <input type="button" class="btn btn-success" id="download_excel" data-url="@{Excels.exportMonthlyShipmentPrescription()}"
                  value="导出Excel"/>
         </div>
 
@@ -39,20 +39,28 @@
   </form>
 
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span6">
+      <b style="color:#0e90d2">各市场平均运输时效统计</b>
       <table id="shipItemTable" class="table table-condensed table-bordered">
         <tr>
           <th>运输方式</th>
           <th>市场</th>
           <th>平均时效</th>
         </tr>
-
+      #{list items:map.keySet(), as:'key'}
+        <tr>
+          <td>${map.get(key)._1}</td>
+          <td>${map.get(key)._2}</td>
+          <td>${map.get(key)._3}</td>
+        </tr>
+      #{/list}
       </table>
     </div>
   </div>
 
   <div class="row-fluid">
     <div class="span12">
+      <b style="color:#0e90d2">各运输时效统计明细</b>
       <table id="shipItemTable" class="table table-condensed table-bordered">
         <tr>
           <th>运输单号</th>
