物料出货单创建 新增是否同意供应商验证

--- a/core/app/views/MaterialPlans/indexMaterial.html
+++ b/core/app/views/MaterialPlans/indexMaterial.html
@@ -68,8 +68,7 @@
             <td>
               <label class="checkbox">
                 <input type="checkbox" name="pids" value="${m.id}" class="${tr_key}" id="checkbox_${m.id}"
-                       data-boxnum="" data-num="" data-lastcartonnum="" data-singleboxweight="" data-length=""
-                       data-width="" data-height="">
+                       cooperName="${m.cooperators()}">
               </label>
             </td>
             <td>${m.code}</td>
