修复物料列表 Title 显示不正确bug

--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -1,5 +1,5 @@
 #{extends 'main_full.html' /}
-#{set title:"收货入库列表"  /}
+#{set title:"物料列表"  /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
 #{/set}
