1  开发  物料新增/修改 配置包装组 功能 2  修改 包装bom修改页面显示物料名称问题

--- a/core/app/views/Materials/blank.html
+++ b/core/app/views/Materials/blank.html
@@ -36,7 +36,12 @@
         </td>
         <th>包装组</th>
         <td>
-          <input type="text"/>
+          <select name="boms[0].id" class="inline selectize" style="width:220px;" >
+            <option value="">请输入包装组</option>
+              #{list items:materialBoms, as:'b'}
+                <option value="${b.id}">${b.name}</option>
+              #{/list}
+          </select>
         </td>
       </tr>
       <tr>
