--- a/core/app/views/Materials/edit.html
+++ b/core/app/views/Materials/edit.html
@@ -36,7 +36,12 @@
         </td>
         <th>包装组</th>
         <td>
-          <input type="text"/>
+          <select name="boms[0].id" class="inline selectize" style="width:220px;" >
+            <option value="">请输入包装组</option>
+              #{list items:materialBoms, as:'b'}
+                <option #{if boms[0]?.id==b.id} selected #{/if} value="${b.id}">${b.name}</option>
+              #{/list}
+          </select>
         </td>
 
       </tr>
