物料页面文字调整

--- a/core/app/views/Materials/editBom.html
+++ b/core/app/views/Materials/editBom.html
@@ -18,7 +18,7 @@
   <div class="span12">
     <table class="table table-bordered">
       <tr>
-        <th>包装组编号<span style="color:red">*</span></th>
+        <th>B0M—ID<span style="color:red">*</span></th>
         <td>
           <input type="text" name="bom.number" required autocomplete="off" value="${bom.number}">
           <input type="hidden" name="bom.id" value="${bom.id}">
