--- a/core/app/views/Materials/indexBom.html
+++ b/core/app/views/Materials/indexBom.html
@@ -40,7 +40,7 @@
       <div class="span12">
         <table class="table table-condensed table-bordered" id="data-table">
           <tr>
-            <th width="15%;">包装组编号</th>
+            <th width="15%;">B0M—ID</th>
             <th width="30%;">名称</th>
             <th width="100px;">PM</th>
             <th width="15%;">状态</th>
@@ -91,7 +91,7 @@
     <form action="@{Materials.createBom()}" method="post" id="create_form">
       <table class="table table-condensed table-bordered">
         <tr>
-          <th>包装组编号</th>
+          <th>B0M—ID</th>
           <td><input type="text" name="b.number" required></td>
         </tr>
         <tr>
