--- a/core/app/views/Materials/edit.html
+++ b/core/app/views/Materials/edit.html
@@ -39,7 +39,7 @@
           <select name="boms[0].id" class="inline selectize" style="width:220px;" >
             <option value="">请输入包装组</option>
               #{list items:materialBoms, as:'b'}
-                <option #{if boms[0]?.id==b.id} selected #{/if} value="${b.id}">${b.name}</option>
+                <option #{if boms[0]?.id==b.id} selected #{/if} value="${b.id}">${b.number}-${b.name}</option>
               #{/list}
           </select>
         </td>
