--- a/core/app/views/Materials/index.html
+++ b/core/app/views/Materials/index.html
@@ -43,7 +43,7 @@
             <th>物料编码</th>
             <th>物料名称</th>
             <th>物料类别</th>
-            <th>包装组编号</th>
+            <th>B0M—ID</th>
             <th>规格</th>
             <th width="150px;">工艺</th>
             <th width="150px;">图号/版本</th>
@@ -55,7 +55,7 @@
             <td>${m.code}</td>
             <td>${m.name}</td>
             <td>${m.type.label()}</td>
-            <td></td>
+            <td>${m.boms[0]?.number}</td>
             <td>${m.specification}</td>
             <td>${m.technology}</td>
             <td>${m.version}</td>
