--- a/core/app/views/MaterialPlans/blank.html
+++ b/core/app/views/MaterialPlans/blank.html
@@ -108,7 +108,8 @@
           <td>${unit.surplusConfirmQty()}</td>
           <td>${unit.surplusPendingQty()}</td>
           <td>
-            <input type="text" style="width:40px;" data-origin="${unit.availableQty()}" name="dtos[${unit_index-1}].outQty">
+            <input type="text" style="width:40px;" data-origin="${unit.availableQty()}"
+                   surplusConfirmQty="${unit.surplusConfirmQty()}" name="dtos[${unit_index-1}].outQty">
           </td>
           <td>${unit.projectName}</td>
         </tr>
