更改“仓库”字段为去往国家；导出明细中的市场以中文显示

--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -41,7 +41,7 @@
       </td>
       <th>晚到货原因</th>
       <td>
-        <input name="ship.reason" class="span8" rel="popover" placement="right" value="${ship.reason}" id="reason"/>
+        <input type="text" name="ship.reason" class="input-xxlarge" value="${ship.reason}" id="reason"/>
       </td>
     </tr>
 
@@ -114,7 +114,7 @@
     </tr>
 
     <tr>
-      <th>仓库</th>
+      <th>去往国家</th>
       <td>
         <select name="ship.whouse.id">
           <option value="">选择仓库</option>
