--- a/core/app/views/Materials/indexBom.html
+++ b/core/app/views/Materials/indexBom.html
@@ -16,16 +16,10 @@
   <form action="@{Materials.indexBom()}" method="get" class="search_form" id="search_Form">
     <div class="row-fluid">
       <div class="span12">
-        <select name="p.type" class="inline">
-          <option value="">物料类别</option>
-        #{list items:models.material.MaterialBom.S, as:'t'}
-          <option #{if p.status==t} selected #{/if} value="${t.name()}">${t.label()}</option>
-        #{/list}
-        </select>
-
+        
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="包装组编号 or 名称 or PM" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="包装组编号 or 名称" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -50,15 +44,14 @@
         #{list items:boms, as:'m'}
           <tr>
             <td>${m.number}</td>
-            <td>${m.name}</td>
-            <td>${m.creator?.username}</td>
-            <td>
-              <select>
-                  #{list items:models.material.MaterialBom.S, as:'s'}
-                    <option value="${s.name()}">${s.label()}</option>
-                  #{/list}
-              </select>
+            <td style="cursor:pointer;" data-url="@{Materials.showMaterialListByBom(m.id)}" data-id="${m.id}"
+                name="clickTd">
+              <span><i class="icon-reorder"></i></span>
+              <span>${m.name}</span>
+              <span class="badge badge-info">${m.materials.size()}</span>
             </td>
+            <td>${m.creator?.username}</td>
+            <td>${m.status.label()}</td>
             <td>#{time_tooltip time:m.updateDate/}</td>
             <td>
               <a href="@{Materials.editBom(m.id)}" class="btn btn-mini btn-primary">编辑</a>
