--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -96,7 +96,7 @@
                   <li><a href="@{Deliverplans.index()}">出货单</a></li>
                 #{/power.ck}
 
-                #{power.ck "materialPurchases.index"}
+                #{power.ck "materialpurchases.index"}
                   <li class="divider"></li>
                   <li><a href="@{MaterialPurchases.index()}">物料采购单</a></li>
                   <li><a href="@{MaterialUnits.index()}">物料采购计划</a></li>
@@ -220,7 +220,7 @@
                 #{power.ck "whouses.index"}
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
-                #{power.ck "materialOutbounds.index"}
+                #{power.ck "materialoutbounds.index"}
                   <li class="divider"></li>
                   <li><a href="@{MaterialOutbounds.indexMaterial()}">物料库存管理</a></li>
                   <li><a href="@{MaterialOutbounds.index()}">物料出库</a></li>
