--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -13,10 +13,12 @@
   <div class="row-fluid">
     <div class="span12">
     #{if ship.projectName == models.User.COR.MengTop}
-      #{render './_b2b_shipitem.html', items: ship.items, itmRecord: true, isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
+        #{render './_b2b_shipitem.html', isExpress: java.util.Arrays.asList('EXPRESS','DEDICATED').contains(ship.type.name()),
+        items: ship.items, itmRecord: true/}
     #{/if}
       #{else }
-        #{render './_shipitem.html', items: ship.items, itmRecord: true, isExpress: ship.type == models.procure.Shipment.T.EXPRESS/}
+        #{render './_shipitem.html', isExpress: java.util.Arrays.asList('EXPRESS','DEDICATED').contains(ship.type.name()),
+        items: ship.items, itmRecord: true/}
     #{/else}
     </div>
   </div>
