物料增加order by 字段 和页面增加分页js

--- a/core/app/views/MaterialOutbounds/index.html
+++ b/core/app/views/MaterialOutbounds/index.html
@@ -2,6 +2,7 @@
 #{set title:"物料出库单列表"  /}
 #{set 'moreScripts'}
   #{script 'materialOutbounds/index.es6'/}
+  #{script 'component/pagination.coffee'/}
 #{/set}
 <style>
   .table td{
