--- a/core/app/views/MaterialOutbounds/indexMaterial.html
+++ b/core/app/views/MaterialOutbounds/indexMaterial.html
@@ -2,6 +2,7 @@
 #{set title:"物料库存列表"  /}
 
 #{set 'moreScripts'}
+    #{script 'component/pagination.coffee'/}
     #{script 'materialOutbounds/indexMaterial.es6'/}
 #{/set}
 <style>
