--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -175,6 +175,10 @@
                 #{power.ck "sku.salecostprofitanalyse"}
                   <li><a href="@{Finances.skuProfitAnalyse()}">SKU销售利润成本分析报表</a></li>
                 #{/power.ck}
+                #{power.ck "materialoutbounds.index"}
+                  <li class="divider"></li>
+                  <li><a href="@{Applys.materials()}">物料请款单列表</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
