--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -7,53 +7,48 @@
 #{flash_alert /}
 #{errorMsgs /}
 
-<!-- 搜索form begin -->
-#{form @MaterialPlans.index(), class:'search_form', id:'deliverys_form'}
-<div class="row-fluid">
-  <div class="span12">
-    <div class="input-prepend input-append inline">
-      <span class="add-on">From:</span>
-      <input type="date" name="p.from" value="${p.from.date()}">
-      <span class="add-on">To:</span>
-      <input type="date" name="p.to" value="${p.to.date()}">
+<form action="@{MaterialPlans.index()}" class="search_form" id="deliverys_form">
+  <div class="row-fluid">
+    <div class="span12">
+      <div class="input-prepend input-append inline">
+        <span class="add-on">From:</span>
+        <input type="date" name="p.from" value="${p.from.date()}">
+        <span class="add-on">To:</span>
+        <input type="date" name="p.to" value="${p.to.date()}">
+      </div>
+
+      <select name="p.cooperId" class="inline selectize" style="width:150px;">
+        <option value="">供应商</option>
+      #{list items:suppliers, as:'sp'}
+        <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
+      #{/list}
+      </select>
+
+      <select name="p.planState" style="width: 150px;" class="inline">
+        <option value="">状态</option>
+      #{list items:models.material.MaterialPlan.P.values(), as:'t'}
+        <option value="${t.name()}" ${t.name() == p.planState?.name() ? 'selected' : ''}>${t.label()}</option>
+      #{/list}
+      </select>
+
+      <div class="input-prepend input-append inline">
+        <span class="add-on"><i class="icon-search"></i></span>
+        <input type="text" style="width:180px;" name="p.search" class="input-medium" value="${p.search}"
+               placeHolder="搜索 物料编码 or 物料出货单ID">
+        <input type="hidden" name="p.page" value="${p.page}">
+        <input type="hidden" name="id" id="planId">
+        <button class="btn btn-primary" data-loading>搜索</button>
+      </div>
+
+      <div class="inline">
+        <a href="javascript:void(0)" data-url='@{MaterialPlans.approveBatch()}' class="btn btn-warning inline"
+           id="confirmMaterialPlanBtn">财务审核</a>
+      </div>
+
     </div>
-
-
-    <select name="p.cooperId" class="inline">
-      <option value="">供应商</option>
-        #{list items:suppliers, as:'sp'}
-          <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
-        #{/list}
-    </select>
-
-    <select name="p.planState" style="width: 150px;" class="inline">
-      <option value="">状态</option>
-        #{list items:models.material.MaterialPlan.P.values(), as:'t'}
-          <option value="${t.name()}" ${t.name() == p.planState?.name() ? 'selected' : ''}>${t.label()}</option>
-        #{/list}
-    </select>
-
-    <div class="input-prepend input-append inline">
-      <span class="add-on"><i class="icon-search"></i></span>
-      <input type="text" style="width:180px;" name="p.search" class="input-medium" value="${p.search}"
-             placeHolder="搜索 物料编码 or 物料出货单ID">
-      <input type="hidden" name="p.page" value="${p.page}">
-      <button class="btn btn-primary" data-loading>搜索</button>
-    </div>
-
-    <div class="input-prepend input-append inline">
-      <a href="javascript:void(0)" data-url='@{MaterialPlans.approveBatch()}' class="btn btn-warning inline"
-         id="confirmMaterialPlanBtn">财务审核</a>
-    </div>
-
   </div>
-</div>
-#{/form}
-<!-- 搜索form end -->
+  <input type="hidden" name="p.page" value="${p.page}">
 
-
-<!-- 操作('发给供应商','批量发货','批量签收')form begin -->
-<form method="post" id="create_deliveryment">
   <div class="row-fluid">
     <div class="span12">
       <table class="table table-condensed table-bordered" id="data-table">
@@ -98,11 +93,10 @@
           <td>${dp.receipt?.label()}</td>
           <td>${dp.receiveCooperator?.name}</td>
           <td>
-
               #{if dp.financeState.name() == financeState.name()}
                 <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
-                <a  href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
-                    class="btn btn-small btn-warning" uid="${dp.id}">审核</a>
+                <a href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
+                   class="btn btn-small btn-warning" uid="${dp.id}">审核</a>
               #{/if}
               #{else}
               ${dp.financeState?.label()}
@@ -113,13 +107,28 @@
           <td>#{time_tooltip time:dp.createDate/}</td>
         </tr>
       #{/list}
+        <tr class="tb_footer">
+          <td colspan="13">
+          #{bootstrap_pager pi:p, url:'' /}
+          </td>
+        </tr>
       </table>
+      <div class="btn-toolbar">
+      #{power.ck 'deliveryments.deliverymenttoapply'}
+        <select name="applyId" class="inline selectize" style="width:250px;">
+          <option value="0">新请款单</option>
+            #{list items:avaliableApplies, as:'a'}
+              <option value="${a.id}">${a.serialNumber}</option>
+            #{/list}
+        </select>
+        <input url='@{MaterialPlans.materialPlanToApply()}' type="submit"
+               id="goToApply" class="btn btn-success" value="出货单请款">
+      #{/power.ck}
+      </div>
     </div>
   </div>
 </form>
-<!-- 操作('发给供应商','批量发货','批量签收')form end -->
 
-#{bootstrap_pager pi:p, url:'' /}
 
 
 <!--  修改签收数量 弹出div begin   -->
