--- a/core/app/views/Products/show.html
+++ b/core/app/views/Products/show.html
@@ -30,7 +30,7 @@
     <a href="#basicinfo" data-toggle='tab'>基本信息</a>
   </li>
   <li>
-    <a href="#extends" data-toggle='tab'>扩展属性</a>
+    <a href="#extends" data-toggle='tab'>物流信息</a>
   </li>
   <li>
     <a href="#newattach" data-toggle='tab' id="showAttachs">附件管理</a>
