1、出货单创建页：物料出货单ID、出货单名称（文字修改） 2、物料出货单列表：添加“物料请款单”字段内容；及内容页添加请款单跳转连接 3、请款单详情页：点击批量申请尾款时，若存在勾选了已申请款项的物料编码，则不能成功批量请款，提示“存在重复申请尾款的物料，请查证！” 4、请款单详情页：下拉项中的请款数量，去掉小数点； 5、请款单详情页：出货单状态显示错误 6、请款单详情页：剩余请款金额赋值错误 7、请款单列表排序使用倒叙方式 8、请款单列表：添加“剩余请款金额”字段内容 9、请款单列表：搜索框支持搜索请款单编号与物料编码（考虑可能搜索出多个物料编码，因此添加时间筛选框）

--- a/core/app/views/Applys/material.html
+++ b/core/app/views/Applys/material.html
@@ -88,7 +88,6 @@
         <th>数量(交货/签收)</th>
         <th>单价</th>
         <th>单价*签收数量</th>
-        <th>剩余请款金额</th>
         <th>出货单状态</th>
       </tr>
         #{list items:dmt.applyUnit(), as:'procureUnit'}
@@ -116,9 +115,7 @@
             <td>${procureUnit.getCurrency().symbol()} ${procureUnit.getPrice()}</td>
             <td class="price" amount="${procureUnit.totalAmount()}">
             ${procureUnit.getCurrency().symbol()} ${procureUnit.totalAmount().format('#,###.##')}</td>
-            <td>
-            ${procureUnit.getCurrency().symbol()} ${procureUnit.totalAmount().format('#,###.##')}</td>
-            <td style="background-color:${procureUnit.stage.rgb()}">${procureUnit.stage.label()}</td>
+            <td style="background-color:${procureUnit.stage.rgb()}">${procureUnit.materialPlan.state.label()}</td>
           </tr>
           <tr id="unit_${pid}" style="display:none">
             <td colspan="12">
@@ -175,7 +172,7 @@
                                 <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
                               </td>
                               <td>${fee.feeType.nickName}</td>
-                              <td>${fee.unitQty}</td>
+                              <td>${fee.unitQty.format('#')}</td>
                               <td>${fee.currency.symbol()} ${new java.math.BigDecimal(fee.amount).setScale(2,4).floatValue().format('#,###.##')}</td>
                               <td>
                                 <div class="row-fluid">
