--- a/core/app/views/Applys/materials.html
+++ b/core/app/views/Applys/materials.html
@@ -8,7 +8,17 @@
 #{form @Applys.materials(), class:'search_form', id:'applys_form', method:'POST'}
 <div class="row-fluid">
   <div class="span12">
-   
+    
+    <div class="input-prepend input-append inline">
+      <span class="add-on">From:</span>
+      <input type="date" name="p.from" value="${p.from.date()}">
+      <span class="add-on">To:</span>
+      <input type="date" name="p.to" value="${p.to.date()}">
+    </div>
+
+    <div class="inline">
+        #{select_enum name:'p.dateType', items:models.view.post.ProcreApplyPost.DateType.values(), value:p.dateType/}
+    </div>
     <div class="inline">
       <select name="p.supplierId" class="selectize" style="width:150px;">
         <option value="">供应商</option>
@@ -21,7 +31,7 @@
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="hidden" name="p.page" value="${p.page}">
-      <input type="text" name="p.search" style="width: 180px;" value="${p.search}" placeHolder="请款单编号或采购计划ID">
+      <input type="text" name="p.search" style="width: 220px;" value="${p.search}" placeHolder="请款单编号 or 物料编码">
       <button class="btn btn-primary" data-loading>搜索</button>
     </div>
   </div>
@@ -34,6 +44,7 @@
       <th>请款单编号</th>
       <th>合作伙伴</th>
       <th>已经请款金额</th>
+      <th>剩余请款金额</th>
       <th>总需要请款金额</th>
       <th>修正值总额</th>
       <th>最新更新时间</th>
@@ -46,6 +57,8 @@
           <td>${apply.cooperator.fullName}</td>
             #{set currency:apply.currency()/}
           <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.appliedAmount()).setScale(2, 4)
+          .floatValue().format('#,###.##')}</td>
+          <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.totalAmount()-apply.appliedAmount()).setScale(2, 4)
           .floatValue().format('#,###.##')}</td>
           <td>${currency?.symbol()} ${new java.math.BigDecimal(apply.totalAmount()).setScale(2, 4)
           .floatValue().format('#,###.##')}</td>
