--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -148,9 +148,13 @@
                 #{/power.ck}
                 #{power.ck "shipmentreports.lossrate"}
                   <li><a href="@{ShipmentReports.lossRateReport()}">运输丢失率统计报表</a></li>
+                  <li><a href="@{ShipmentReports.monthlyShipmentReport()}">单月物流发货量报表</a></li>
+                  <li><a href="@{ShipmentReports.monthlyShipmentPrescription()}">单月运输时效统计</a></li>
                 #{/power.ck}
-              <li><a href="@{ShipmentReports.monthlyShipmentReport()}">单月物流发货量报表</a></li>
-              <li><a href="@{ShipmentReports.monthlyShipmentPrescription()}">单月运输时效统计</a></li>
+                #{power.ck "products.index"}
+                  <li class="divider"></li>
+                  <li><a href="@{Products.indexForShipment()}">产品属性列表</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
